Fix: folder name overflow

--- a/src/scss/partials/_account.scss
+++ b/src/scss/partials/_account.scss
@@ -11,6 +11,7 @@
         grid-area: top-section;
         padding: 0 $default-spacing;
         padding-top: $default-spacing / 2;
+        width: 100vw;
 
         .toolbar
         {
